Pausando C10 y notebook de regresion lineal simple hecho

--- a/10_Regresion_Multiple_y_Polinomica.ipynb
+++ b/10_Regresion_Multiple_y_Polinomica.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\begin{equation}n = B_0 + B_1x + B_2x^2 + ... + B_mx^m = B_ix^i\n",
+    "Sabemos que el modelo de línea recta sigue este modelo:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\\eta = \\beta_0 + \\beta_{1}x\n",
     "\\end{equation}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "que relaciona la variable dependiente $\\eta$ a una variable $x$.\n",
+    "\n",
+    "Pero hay modelos donde $\\eta$ no puede ser supeditada a una sola variable sino a dos o más variables. Esto es para una regresión lineal múltiple.\n",
+    "\n",
+    "Podemos proponer un modelo general para varias variables como éste:\n",
+    "\n",
+    "$$\\begin{equation}\\eta = \\beta_0 + \\beta_1x_1 + \\beta_2x_2 + ... + \\beta_mx_m = \\beta_0 + \\sum_{i=1}^{m}\\beta_{i}x_{i}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Esta relación\n",
+    "$$\\begin{equation}\\eta = \\beta_{0} + \\frac{\\beta_{1}}{x_{1}^{2}} + \\beta_{2}\\log x_{2}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "también es un modelo lineal tomando $x_{1}^{\\prime}=\\frac{1}{x_{1}^{2}}$ y $x_{2}^{\\prime}=\\log x_{2}$ como una relación similar a la anterior ecuación descrita."
    ]
   },
   {
@@ -50,6 +69,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -68,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
