--- a/C9_Vectores_y_Matrices.ipynb
+++ b/C9_Vectores_y_Matrices.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "X6ngxKAOEBVO"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "mAx9do-YBQdU"
       },
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "bq1vPhL3Cn6f"
       },
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "EICslEnjJ0ks"
       },
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "rQqPgNNcD9cv"
       },
@@ -227,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -242,7 +242,7 @@
               "array([0, 1, 2, 3, 4])"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "9oTyd6XgKewf"
       },
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "id": "lZ0N7IKSK6f9"
       },
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -489,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "id": "O0QaTJsyJm7L"
       },
@@ -504,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -540,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -555,7 +555,7 @@
               "7.416198487095663"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -566,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -581,7 +581,7 @@
               "2.23606797749979"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -592,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -607,7 +607,7 @@
               "519.2301994298867"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {
         "id": "Pzi5NHnOMvgP"
       },
@@ -653,7 +653,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -693,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -792,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 24,
       "metadata": {
         "id": "tvqrdqSnTSF6"
       },
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -844,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -869,7 +869,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 27,
       "metadata": {
         "id": "64-PZfw2UeH1"
       },
@@ -881,7 +881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -919,7 +919,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -972,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 30,
       "metadata": {
         "id": "HAeAHlXgxdrs"
       },
@@ -984,7 +984,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1018,7 +1018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 32,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1061,7 +1061,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 33,
       "metadata": {
         "id": "ytvOqKU_79Au"
       },
@@ -1078,7 +1078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1113,7 +1113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1244,7 +1244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1331,7 +1331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1411,7 +1411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1453,7 +1453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1551,7 +1551,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1606,7 +1606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 43,
       "metadata": {
         "id": "kUlrQtRYTpsx"
       },
@@ -1614,14 +1614,40 @@
       "source": [
         "def dimension(m):\n",
         "    rows = len(m)\n",
-        "    columns = len(m[0])\n",
-        "    tupla = (rows, columns)\n",
+        "    #len(m[0])\n",
+        "    if type(m[0]) == int:\n",
+        "        tupla = (rows, 1)\n",
+        "    else:\n",
+        "        columns = len(m[0])\n",
+        "        tupla = (rows, columns)\n",
         "    return tupla"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(11, 1)\n",
+            "(11, 1)\n"
+          ]
+        }
+      ],
+      "source": [
+        "x = [-9,-7,-5,-3,-1,0,1,3,5,7,9]\n",
+        "y = [-17,-13,-9,-5,-1,0,3,7,11,15,19]\n",
+        "\n",
+        "print(dimension(x))\n",
+        "print(dimension(y))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1760,7 +1786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "kFXMxMo3onmK"
       },
@@ -1783,7 +1809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1830,7 +1856,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
