agregué el nombre del profesor

--- a/regresion_lineal_simple.ipynb
+++ b/regresion_lineal_simple.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,8 +347,10 @@
     "    for i in range(epocas):\n",
     "        y_hat = forward_propagation(x, w, b)\n",
     "        costo = calcular_error(y, y_hat)\n",
-    "        w = w - alpha * DJ_Dw(x, y, y_hat)\n",
-    "        b = b - alpha * DJ_Db(y, y_hat)\n",
+    "        dw = DJ_Dw(x, y, y_hat)\n",
+    "        db = DJ_Db(y, y_hat)\n",
+    "        w = w - alpha * dw\n",
+    "        b = b - alpha * db\n",
     "        if (i+1) % 10 == 0:\n",
     "            print(f\"Costo en la época {i+1}: {costo}\")\n",
     "\n",
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -394,12 +396,16 @@
       "Costo en la época 280: 0.20744556968385658\n",
       "Costo en la época 290: 0.16596273158364935\n",
       "Costo en la época 300: 0.13826845817692549\n",
-      "W y b al final del entrenamiento: w:2.0, b:1.140221016187914\n"
+      "Costo en la época 310: 0.11977954047863144\n",
+      "Costo en la época 320: 0.10743619163412665\n",
+      "Costo en la época 330: 0.0991956735473812\n",
+      "Costo en la época 340: 0.09369423798127777\n",
+      "W y b al final del entrenamiento: w:2.0, b:1.0003457689291082\n"
      ]
     }
    ],
    "source": [
-    "entrenar(x, y, 300, 0.01)"
+    "entrenar(x, y, 346, 0.01)"
    ]
   },
   {
