Mas info al notebook pca y notebook de regression con pcapara nir

--- a/algoritmos_geneticos.ipynb
+++ b/algoritmos_geneticos.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "1. **Generar población inicial.**\n",
     "Luego en un ciclo colocar los siguientes pasos, hasta que se cumplan las generaciones o detenerlas por código cuando pasen x generaciones sin cambios en el resultado de la función de aptitud:\n",
-    "2. **Calcular la función de aptitud**, también conocida como el fitness o fitness function. Esta función cambiará según el problema que se esté tratando. Por ejemplo, si lo que se busca predecir es algo numérico, se podría usar el error cuadrático medio como función de aptitud. A partir de ella se podría calcular el coeficiente de determinación o $R^2$.\n",
+    "2. **Calcular la función de aptitud**, también conocida como el fitness o fitness function. Esta función cambiará según el problema que se esté tratando. Por ejemplo, si lo que se busca predecir es algo numérico, se podría usar el error cuadrático medio como función de aptitud. A partir de ella se podría calcular el coeficiente de determinación o $R^2$. En cambio si el problema es de clasificación binaria, la función de aptitud irá más por la función de pérdida de la regresión logística y por el accuracy.\n",
     "3. **Selección de padres**. Los padres son individuos que, luego de haber calculado el fitness, dan los mejores valores del fitness y sean candidatos para cruzarlos en la siguiente generación. Es importante aclarar algo y es que esta selección dependerá de lo que se busque. Si seleccionamos los individuos que minimizan la fitness function que sea un error cuadrático medio, es equivalente a seleccionar los individuos que maximizan la fitness function que sea un coeficiente de determinación.\n",
     "4. **Hacer el cruce genético entre padres**. Hay varios métodos para hacer cruces genéticos.\n",
     "5. **Mutación**. Hay varios métodos para hacer la mutación. Se dará en un pequeño porcentaje de los individuos que son resultado del cruce.\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "modelo = [1,1,1,1,1,1,1,1,1,1]\n",
+    "modelo = [1,1,1,1,1,1,1,1,1,1] # Este es el objetivo al que los individuos deben buscar parecerse.\n",
     "largo = 10\n",
     "num = 10\n",
     "pressure = 3\n",
