regresion fallida de las demas variables

--- a/PCA_Y_RLM_NIR.ipynb
+++ b/PCA_Y_RLM_NIR.ipynb
@@ -18,6 +18,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -390,6 +399,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Separación de variables de salida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traccion = Y_train_scaled.T[0].reshape(-1,1)\n",
+    "energia = Y_train_scaled.T[1].reshape(-1,1)\n",
+    "tensil = Y_train_scaled.T[2].reshape(-1,1)\n",
+    "elongacion = Y_train_scaled.T[3].reshape(-1,1)\n",
+    "secante = Y_train_scaled.T[4].reshape(-1,1)\n",
+    "flexion = Y_train_scaled.T[5].reshape(-1,1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -468,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -476,15 +507,17 @@
      "output_type": "stream",
      "text": [
       "0.1457016441101885\n",
-      "-4.86334053474194\n"
+      "0.1457016441101885\n",
+      "0.8542983558898115\n"
      ]
     }
    ],
    "source": [
-    "regression.fit(X_train_pca, Y_train_scaled.T[0])\n",
-    "print(regression.score(X_train_pca, Y_train_scaled.T[0]))\n",
+    "regression.fit(X_train_pca, traccion)\n",
+    "print(regression.score(X_train_pca, traccion))\n",
     "y = regression.predict(X_train_pca)\n",
-    "print(r2_score(y, Y_train_scaled.T[0]))"
+    "print(r2_score(traccion, y))\n",
+    "print(mean_squared_error(traccion, y))"
    ]
   },
   {
@@ -497,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -505,15 +538,161 @@
      "output_type": "stream",
      "text": [
       "0.49189633019367285\n",
-      "-0.032948689831195255\n"
+      "0.49189633019367285\n",
+      "0.5081036698063273\n"
      ]
     }
    ],
    "source": [
-    "regression.fit(X_train_pca, Y_train_scaled.T[1])\n",
+    "regression.fit(X_train_pca, energia)\n",
     "y = regression.predict(X_train_pca)\n",
-    "print(regression.score(X_train_pca, Y_train_scaled.T[1]))\n",
-    "print(r2_score(y, Y_train_scaled.T[1]))"
+    "print(regression.score(X_train_pca, energia))\n",
+    "print(r2_score(energia, y))\n",
+    "print(mean_squared_error(energia, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1155"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gc.collect()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tensil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12163727927395829\n",
+      "0.12163727927395829\n",
+      "0.8783627207260417\n"
+     ]
+    }
+   ],
+   "source": [
+    "regression.fit(X_train_pca, tensil)\n",
+    "y = regression.predict(X_train_pca)\n",
+    "print(regression.score(X_train_pca, tensil))\n",
+    "print(r2_score(tensil, y))\n",
+    "print(mean_squared_error(tensil, y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Elongación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2782245646747912\n",
+      "0.2782245646747912\n",
+      "0.7217754353252088\n"
+     ]
+    }
+   ],
+   "source": [
+    "regression.fit(X_train_pca, elongacion)\n",
+    "y = regression.predict(X_train_pca)\n",
+    "print(regression.score(X_train_pca, elongacion))\n",
+    "print(r2_score(elongacion, y))\n",
+    "print(mean_squared_error(elongacion, y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Secante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1159226819190673\n",
+      "0.1159226819190673\n",
+      "0.8840773180809327\n"
+     ]
+    }
+   ],
+   "source": [
+    "regression.fit(X_train_pca, secante)\n",
+    "y = regression.predict(X_train_pca)\n",
+    "print(regression.score(X_train_pca, secante))\n",
+    "print(r2_score(secante, y))\n",
+    "print(mean_squared_error(secante, y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Flexión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06663115811873255\n",
+      "0.06663115811873255\n",
+      "0.9333688418812675\n"
+     ]
+    }
+   ],
+   "source": [
+    "regression.fit(X_train_pca, flexion)\n",
+    "y = regression.predict(X_train_pca)\n",
+    "print(regression.score(X_train_pca, flexion))\n",
+    "print(r2_score(flexion, y))\n",
+    "print(mean_squared_error(flexion, y))"
    ]
   },
   {
